--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,8 +3,8 @@ name: Create Release
 on:
   workflow_dispatch:
   push:
-    tags:
-      - 'v*' # Triggers workflow on tags starting with 'v'
+    branches:
+      - main
 
 jobs:
   release:
@@ -15,7 +15,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Get Repo Name
-        run: echo "REPO_NAME=$(basename ${{github.repository}})" >> $REPO_NAME
+        run: export REPO_NAME=$(basename ${{github.repository}})
 
         # Run the included ./pack-instance.sh script to generate .zip file for publishing
       - name: Run pack-instance script
