--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,12 +18,25 @@ jobs:
         run: export REPO_NAME=$(basename ${{github.repository}})
 
         # Run the included ./pack-instance.sh script to generate .zip file for publishing
-      - name: Run pack-instance script
-        run: |
-            chmod +x ./pack-instance.sh
-            ./pack-instance.sh modpack_${{ env.REPO_NAME }}.zip
+      #   - name: Run pack-instance script
+      #     run: |
+      #         chmod +x ./pack-instance.sh
+      #         ./pack-instance.sh modpack.zip
+
+      # Install Nix
+    #   - uses: cachix/install-nix-action@v31
+    #     with:
+    #       nix_path: nixpkgs=channel:nixos-unstable
+
+    #   - name: Export modpack to Modrinth
+    #     run: nix run nixpkgs#packwiz modrinth export
+    
+      - name: Find Modrinth file
+        run: | 
+            echo "FILE_PATH=$(realpath $(find . -name "*.mrpack" | head -n 1))" >> $GITHUB_ENV
+
       - name: Upload release artifact
         uses: actions/upload-artifact@v4
         with:
-          name: instance-package
-          path: ./modpack_${{ env.REPO_NAME }}.zip
+          name: release
+          path: ${{ env.FILE_PATH }}
